Bug 60132 - FILEOPEN: Error reading file after inserting comment
Summary: FILEOPEN: Error reading file after inserting comment
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.0.2 rc
Hardware: Other All
: high blocker
Assignee: Caolán McNamara
URL:
Whiteboard: BSA target:4.1.0 target:4.0.1
Keywords: regression
: 60550 60881 61145 (view as bug list)
Depends on:
Blocks: mab4.0
  Show dependency treegraph
 
Reported: 2013-01-31 18:06 UTC by pierre-yves samyn
Modified: 2013-12-15 23:32 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample of old document ok (pagination.odt) (13.27 KB, application/vnd.oasis.opendocument.text)
2013-01-31 18:06 UTC, pierre-yves samyn
Details
Sample of old document corrupted (paginationko.odt) (18.34 KB, application/vnd.oasis.opendocument.text)
2013-01-31 18:08 UTC, pierre-yves samyn
Details
Screenshot error reading file (2.76 KB, image/png)
2013-01-31 18:09 UTC, pierre-yves samyn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pierre-yves samyn 2013-01-31 18:06:41 UTC
Created attachment 74009 [details]
Sample of old document ok (pagination.odt)

Hello

Problem description: 

After adding one or a few comments on the text in an "old" document (created with an old version), I am unable to open the file with 4.0.0 rc2. 

No problem with comments inserted in "new" documents.

Platform: 
Version 4.0.0.2 
(Build ID:5991f37846fc3763493029c4958b57282c2597e)
Windows 7 64bits 
Windows XP Pro
Reproduced (fr-qa) Windows XP SP3.

Steps to reproduce:
1. Open attached document "pagination.odt"
2. Select the word "rapport" in first paragraph (but same problem if you select another word)
3. Menu "Insert> Comment", type a comment ("Test" for instance)
4. Menu "File> Save as" and type a new name paginationko.odt (if you want to keep a good version...)
5. Close
6. Try to reopen the document

Expected result: the document open...
Actual result: Read-Error. Error reading file (see screenshot)

I also attach the corrupted document paginationKo.odt

Regards
Pierre-Yves


Operating System: All
Version: 4.0.0.2 rc
Comment 1 pierre-yves samyn 2013-01-31 18:08:43 UTC
Created attachment 74010 [details]
Sample of old document corrupted (paginationko.odt)
Comment 2 pierre-yves samyn 2013-01-31 18:09:35 UTC
Created attachment 74011 [details]
Screenshot error reading file
Comment 3 pierre-yves samyn 2013-01-31 18:13:42 UTC
I select Importance:major because the document can not be opened
Comment 4 sophie 2013-01-31 18:28:30 UTC
Confirmed with the sample document with version Version 4.0.0.2 .0.2 (Build ID: 408fe71bd18616c467b3dcd7ab6756528ffcae2) on Debian with the difference that I don't even have a message, the splash with the progress bar appears briefly, then a blink and nothing else. - Regards -Sophie
Comment 5 Brenda Granados 2013-01-31 20:13:58 UTC
I have also confirmed this using LibreOffice Version 4.0.0.2 (Build ID: 408fe71bd18616c467b3dcd7ab6756528ffcae2) on Ubuntu 12.04.
Comment 6 Jean-Baptiste Faure 2013-01-31 21:04:26 UTC
Argh!!! Reproducible with Version 4.0.1.0+ (Build ID: b82da7a6681494de0cb9a1009b0de59250ba053) under Ubuntu 12.04 x86-64, so probably with LO 4.0.0.3.
Even if you "save as" with LO 4.0 before adding a comment, the resulting file get corrupted. Same problem if you copy the contents of the document in another file by ctrl+A. So it seems that we do not have a workaround.

regression keyword set.

@Miklos: perhaps this bug is linked to the new possibility to attach comments to document text ranges. Please, could you have a look?

Best regards. JBF
Comment 7 royerjy 2013-01-31 21:30:01 UTC
I confirm on XP SP3 with different old documents and new documents from old templates.

It should preferable to postpon this new feature if not corrected.
Comment 8 pierre-yves samyn 2013-02-03 09:21:03 UTC
Hello

Reproduced with Windows 7 64bits & Version 
4.0.0.3 (Build ID: 7545bee9c2a0782548772a21bc84a9dcc583b89)

Regards
Pierre-Yves
Comment 9 Robert Roth 2013-02-06 09:14:04 UTC
The corrupted document however opens fine with 3.6.2.2 (the one installed in Ubuntu), so the document does not seem to be corrupted at all.

Based on what comment 6 says, the regression is with ODT saving in LibreOffice 4.0
Comment 10 Caolán McNamara 2013-02-08 11:12:54 UTC
regression is between 06f20d73da21342046a480a6b22af69901351328..51065497ea83e90764860784dc6e193faaf0d673
Comment 11 Not Assigned 2013-02-08 11:48:12 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=165a53f3a7f08e65055e08ecd4cfc068c5d353b8

Resolves: fdo#60132 Error reading file after inserting comment



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Caolán McNamara 2013-02-08 11:51:03 UTC
review for 4-0 at https://gerrit.libreoffice.org/#/c/2041/
Comment 13 Not Assigned 2013-02-08 11:59:37 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2b2e4eea5d32baf961d0da049f72063b588e88a3&h=libreoffice-4-0

Resolves: fdo#60132 Error reading file after inserting comment


It will be available in LibreOffice 4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 pierre-yves samyn 2013-02-09 06:19:52 UTC
Hello

WORKSFORME with Version 4.1.0.0.alpha0+ (Build ID: 8e658ca263808d3466c62b2acfc82d61901fa57)
TinderBox: Win-x86@6, Branch:master, Time: 2013-02-08_22:04:23

Thank you very much :)

Regards
Pierre-Yves
Comment 15 Jean-Baptiste Faure 2013-02-09 17:41:25 UTC
Verified in LibreOffice Version 4.0.1.0+ (Build ID: 662f0c0d4f07927534359a17055ffaa78508c8b)

Adding comment on text range in pagination.odt (attachment 74009 [details]) and saving -> LO 4.0.1.0+ reopens the file fine and shows the comment as expected
Opening paginationko.odt (attachment 74010 [details]) in LO 4.0.1.0+ -> no problem and the comment "test" on the word "rapport" is shown as expected.

Thank you very much for the fix.
Best regards. JBF
Comment 16 Julien Nabet 2013-02-09 21:38:13 UTC
*** Bug 60550 has been marked as a duplicate of this bug. ***
Comment 17 Michael Stahl 2013-02-22 13:50:16 UTC
*** Bug 60881 has been marked as a duplicate of this bug. ***
Comment 18 Michael Stahl 2013-02-25 17:35:33 UTC
*** Bug 61145 has been marked as a duplicate of this bug. ***
Comment 19 Andreas Siegert 2013-02-27 12:06:15 UTC
Is there an ETA for a public 4.0.1?

We are impacted by this quite a bit.
Comment 20 Miklos Vajna 2013-02-27 15:31:52 UTC
4.0.1 RC1 is available from:

https://www.libreoffice.org/download/pre-releases/