Resolves: fdo#60132 Error reading file after inserting comment

Change-Id: Ib2b388c78c8f44a626267c2f8d3975b46ead3bd5
(cherry picked from commit 165a53f3a7f08e65055e08ecd4cfc068c5d353b8)